force-app/main/default/objects/Foods__x/Foods__x.object-meta.xml
<CustomObject>
    <description>Foods</description>
    <externalDataSource>inventory</externalDataSource>
    <externalName>Foods</externalName>
    <label>Foods</label>
    <pluralLabel>Foods</pluralLabel>
</CustomObject>