force-app/main/default/objects/Foods__x/fields/ContainsGluten__c.field-meta.xml
<CustomField>
    <fullName>ContainsGluten__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ContainsGluten</description>
    <externalDeveloperName>ContainsGluten</externalDeveloperName>
    <label>ContainsGluten</label>
    <type>Checkbox</type>
</CustomField>