force-app/main/default/objects/Foods__x/fields/Organic__c.field-meta.xml
<CustomField>
    <fullName>Organic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Organic</description>
    <externalDeveloperName>Organic</externalDeveloperName>
    <label>Organic</label>
    <type>Checkbox</type>
</CustomField>