force-app/main/default/objects/Foods__x/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>SKU</description>
    <externalDeveloperName>SKU</externalDeveloperName>
    <label>SKU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>