force-app/main/default/objects/Foods__x/fields/SupplierLocation__c.field-meta.xml
<CustomField>
    <fullName>SupplierLocation__c</fullName>
    <description>SupplierLocation</description>
    <externalDeveloperName>SupplierLocation</externalDeveloperName>
    <label>SupplierLocation</label>
    <length>128</length>
    <type>Text</type>
</CustomField>