force-app/main/default/objects/Foods__x/fields/SustainabilityRating__c.field-meta.xml
<CustomField>
    <fullName>SustainabilityRating__c</fullName>
    <description>SustainabilityRating</description>
    <externalDeveloperName>SustainabilityRating</externalDeveloperName>
    <label>SustainabilityRating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>