force-app/main/default/objects/Foods__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>Category__c</columns>
    <columns>Description__c</columns>
    <columns>SKU__c</columns>
    <columns>Organic__c</columns>
    <columns>Supplier__c</columns>
    <columns>SupplierLocation__c</columns>
    <columns>SustainabilityRating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>